[workspace]
members = [
    "dyno-ctl",
    "dyno-api",
    "dyno-coordinator",
    "dyno-lib",
    "dyno-adm",
    "workers/aws",
    "workers/docker",
    "workers/kubernetes",
    "workers/linux",
    "workers/misc",
    "workers/postgres",
    "workers/windows"
, "workers/mock", "workers/base-worker"]
resolver = "2"
