[package]
name = "dyno-coordinator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
dyno-lib = { path = "../dyno-lib"}
futures-lite = "2.6.1"
lapin = "3.2.0"
lazy_static = "1.5.0"
once_cell = "1.21.3"
petgraph = "0.8.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
uuid = "1.18.0"
