[package]
name = "dyno-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
petgraph = { version = "0.8.2", features = ["serde", "serde_derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
thiserror = "2.0.15"
